Parallelized get actions, need to remove what is causing lag in parallel episodes_final

--- a/Predator-Prey/readme
+++ b/Predator-Prey/readme
@@ -10,4 +10,32 @@ python main.py --scenario endless3 --n_predator 2 --n_prey1 0 --n_prey2 1 --n_pr
 
 python main.py --scenario endless3 --n_predator 4 --n_prey1 0 --n_prey2 2 --n_prey 2 --map_size 7 --agent pos_cac_fo --training_step 6000000 --testing_step 10000 --max_step 100 --b_size 1000000 --df 0.99 --eval_step 100 --algorithm $algorithm --lr 0.0005 --seed 0 --penalty 5 --comment 427 &
 
+--scenario endless3
+--n_predator 2
+--n_prey1 0
+--n_prey2 1
+--n_prey 1
+--map_size 5
+--agent pos_cac_fo
+--training_step 3000000
+--testing_step 10000
+--max_step 100
+--b_size 600000
+--df 0.99
+--eval_step 100
+--lr 0.0005 --seed 0 --penalty 5 --comment 215
+extra hyperparameter self.target_update_period
+epsilon_dec,epsilon_min, epsilon in init in trainer.py
+
+high self.target_update_period can decrease instability in convergence of q_network
+penalty is divided by 10 internally
+initially due to high epsilon training results are lower than testing results,because of exploration
+
+instability causes:
+learning_rate of adamoptimizer
+target_update_period
+batch size
+
+https://stackoverflow.com/questions/37044600/sudden-drop-in-accuracy-while-training-a-deep-neural-net
+lower learning rate to avoid sudden drop in score
 
